# speech

./: Cargo.toml
src/: main.rs
src/ecs/: components.rs
src/engine/: graphics.rs  mod.rs  state.rs
src/engine/shaders/: sprite.wgsl
src/game/: level.rs  mod.rs
src/game/entities/: player.rs
src/game/states/: mod.rs  playing.rs
src/levels/: loader.rs
