[package]
name = "speech_game"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.28"      # Window creation and event handling
wgpu = "0.16"       # GPU acceleration and rendering
nalgebra = "0.32"   # Vector and matrix math
image = "0.24"      # Texture loading
legion = "0.4"      # Entity Component System
serde = { version = "1.0", features = ["derive"] }  # Serialization
serde_json = "1.0"  # JSON handling
futures = "0.3"     # For async/await support